# DRF_Viewsets_and_generics_24.1

./: pyproject.toml
config/: settings.py  urls.py
course/: models.py  serilzers.py  urls.py  views.py
course/migrations/: 0001_initial.py
env/Scripts/: activate  activate.bat
lesson/: models.py  serilzers.py  urls.py  views.py
lesson/migrations/: 0001_initial.py
users/: models.py  serilzers.py  urls.py  views.py
users/migrations/: 0001_initial.py
